client/src/App.css
body,
html {
  width: 100%;
  padding: 0;
  margin: 0;
}

* {
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
  /* font-size: 1.1rem; */
  box-sizing: border-box;
}

.container {
  width: 80%;
  display: inline-block;
  margin: 0 auto;
}

p,
small {
  color: #333;
  margin: 0.75rem 0;
}

small {
  font-weight: 400;
}

a:link {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

hr {
  margin: 1rem 0;
  border-top: 1px solid #bbb;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.unallow-link:hover {
  cursor: not-allowed;
}

.hidden {
  display: none !important;
}

.Button-Blue {
  background-color: #3b5998;
  color: white;
}

.Button-White {
  background-color: #fff;
  border: 2px solid #777;
}

.Button-Red {
  background-color: rgb(255, 90, 95);
  color: white;
}

.GreenText {
  color: #008489;
}

.text-centered {
  text-align: center;
}

label {
  display: inline-block;
  margin-bottom: 1rem;
  cursor: pointer;
  font-size: 0.85em;
}

